--- a/06-proyecto1/src/index.css
+++ b/06-proyecto1/src/index.css
@@ -11,7 +11,6 @@ body{
 .layout{
   width: 100%;
   height: auto;
-
   display: grid;
   grid-template-areas:
       "header header header header"
@@ -132,6 +131,10 @@ input[type="button"]{
   font-weight: 500;
   cursor: pointer;
   transition: all 300ms;
+}
+
+.peli-item .edit{
+  margin-right: 7px;
 }
 
 .peli-item .edit:hover{
