Crear Pelis y ACtualizar estado de Listado

--- a/06-proyecto1/src/index.css
+++ b/06-proyecto1/src/index.css
@@ -208,6 +208,10 @@ input[type="button"]{
   
 }
 
+.peli-ok{
+  color:green;
+}
+
 @media (max-width: 1085px){
   .content {
       flex-flow: column wrap;
