--- a/06-proyecto1/src/index.css
+++ b/06-proyecto1/src/index.css
@@ -212,6 +212,10 @@ input[type="button"]{
   color:green;
 }
 
+.no-encontrado{
+  color: #9b0202;
+}
+
 @media (max-width: 1085px){
   .content {
       flex-flow: column wrap;
