--- a/08-proyecto2/src/index.css
+++ b/08-proyecto2/src/index.css
@@ -11,3 +11,76 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.layout{
+  width: 85%;
+  margin: 0 auto;
+}
+.header{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  margin-bottom: 50px;
+  border-bottom: 3px solid black;
+}
+.header nav,
+.header .logo{
+  flex:1 1 auto;
+  height: 150px;
+
+}
+.header .logo{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.header .logo h1{
+  font-weight: 300;
+  text-transform: uppercase;
+  margin: 0;
+}
+
+.header .logo span{
+  font-size: 70px;
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
+.header nav ul{
+  display: flex;
+  list-style: none;
+  margin: 0;
+  align-items: center;
+  justify-content: flex-end;
+  height: 150px;
+}
+
+.header nav ul li{
+  margin:0 10px 0 10px;
+}
+
+.header nav ul li a{
+  text-decoration: none;
+  color: black;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: bold;
+  transition: linear 300ms;
+}
+.header nav ul li a:hover{
+  color: orange;
+}
+
+.content{
+  min-height: 450px;
+}
+
+.footer{
+  padding: 10px;
+  margin-top: 50px;
+  text-align: center;
+  background-color: rgb(33, 33, 33);
+  color:white
+}
