--- a/08-proyecto2/src/index.css
+++ b/08-proyecto2/src/index.css
@@ -69,9 +69,12 @@ code {
   font-weight: bold;
   transition: linear 300ms;
 }
+.header .active,
 .header nav ul li a:hover{
   color: orange;
 }
+
+
 
 .content{
   min-height: 450px;
