--- a/08-proyecto2/src/index.css
+++ b/08-proyecto2/src/index.css
@@ -80,6 +80,17 @@ code {
   min-height: 450px;
 }
 
+.mask{
+  overflow: hidden;
+  width: 100%;
+  height: 400px;
+  box-shadow: 0 0 20px rgb(167, 167, 167);
+}
+.mask img{
+  width: 100%;
+  left: -50px;
+}
+
 .footer{
   padding: 10px;
   margin-top: 50px;
